<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_add"
        android:orderInCategory="10"
        android:title="@string/add_city"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_remove"
        android:orderInCategory="20"
        android:title="@string/remove_city"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_clear"
        android:orderInCategory="30"
        android:title="@string/clear"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_cancel"
        android:orderInCategory="40"
        android:title="@string/cancel"
        app:showAsAction="never" />


</menu>