<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="start"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewDescrNew"
                style="@style/WhetherCityStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/sunny" />

            <TextView
                android:id="@+id/textViewTemperNew"
                style="@style/GreetingCityStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/temperature" />

            <TextView
                android:id="@+id/textViewDayNew"
                style="@style/WhetherCityStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:text="@string/_18" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewIcon"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="start|end"
                android:contentDescription="@string/icon_descr"
                tools:srcCompat="@drawable/clear_sky_01d" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>